--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "tailwindcss": "^1.6.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
